# fun

./: .gitignore  .gitmodules  LICENSE  README.md
apple/objc-arc/: CMakeLists.txt  main.mm
apple/touch/: CMakeLists.txt  main.mm
av/ffmpeg/: CMakeLists.txt  genvid.c  remux.c
av/vidgen/: CMakeLists.txt  vidgen.cc
av/vidshader/: CMakeLists.txt  README.md  s_abbr.glsl  s_basic.glsl  s_invert.glsl  s_kernel.glsl  s_wave.glsl  vidshader.cc
common/: cloc.sh
common/cpp/: CMakeLists.txt  common_core.hh  common_dsa.hh  common_math.hh
dsa/boids/: boids.py
dsa/bvh/: CMakeLists.txt  README.md  bvh.cc
dsa/shapetest/: CMakeLists.txt  shapetest.c
game/funtyper/: CMakeLists.txt  README.md  funtyper.cc
game/funtyper/text/: example.txt  sdl.txt  wikipedia.txt
graphics/metal/: CMakeLists.txt  compile-shaders.sh  gltf.cc  gltf.metal
graphics/opengl/: CMakeLists.txt  gltf-old.cc  gltf.cc  gltf_fs.glsl  gltf_vs.glsl
vscript/: debug_arrow_collision.nut  medigun_pentagram.nut  phlog.nut
